client/etc/k8s/02-service.yml
apiVersion: v1
kind: Service
metadata:
  name: adm-client
  namespace: adm-4
  labels:
    app: adm-client
spec:
  type: ClusterIP
  selector:
    app: adm-client
  ports:
    - protocol: TCP
      port: 8080 # Puerto del servicio
      targetPort: 80 # Puerto del contenedor
