client/etc/k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: adm-client
  namespace: adm-4
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - edu.ajmonfue.me
      secretName: adm-tls
  rules:
  - host: edu.ajmonfue.me
    http:
      paths:
      - path: /adm-4(/|$)(.*)
        backend:
          serviceName: adm-client
          servicePort: 8080
